// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`global/components/utility/Pagination matches the snapshot 1`] = `
<Utility.Pagination
  i18n={
    Object {
      "language": "en",
      "languages": Array [
        "en",
      ],
      "options": Object {
        "appendNamespaceToCIMode": false,
        "appendNamespaceToMissingKey": false,
        "contextSeparator": "_",
        "debug": false,
        "defaultNS": Array [
          "translation",
        ],
        "fallbackLng": Array [
          "en",
        ],
        "fallbackNS": false,
        "ignoreJSONStructure": true,
        "initImmediate": true,
        "interpolation": Object {
          "escapeValue": true,
          "format": [Function],
          "formatSeparator": ",",
          "maxReplaces": 1000,
          "nestingOptionsSeparator": ",",
          "nestingPrefix": "$t(",
          "nestingSuffix": ")",
          "prefix": "{{",
          "skipOnVariables": true,
          "suffix": "}}",
          "unescapePrefix": "-",
        },
        "joinArrays": false,
        "keySeparator": ".",
        "lng": "en",
        "load": "all",
        "missingInterpolationHandler": false,
        "missingKeyHandler": false,
        "nonExplicitSupportedLngs": false,
        "ns": Array [
          "translation",
        ],
        "nsSeparator": ":",
        "overloadTranslationOptionHandler": [Function],
        "parseMissingKeyHandler": false,
        "partialBundledLanguages": false,
        "pluralSeparator": "_",
        "postProcess": false,
        "postProcessPassResolved": false,
        "preload": false,
        "resources": Object {
          "en": Object {},
        },
        "returnEmptyString": true,
        "returnNull": true,
        "returnObjects": false,
        "returnedObjectHandler": false,
        "saveMissing": false,
        "saveMissingPlurals": true,
        "saveMissingTo": "fallback",
        "simplifyPluralSuffix": true,
        "supportedLngs": false,
        "updateMissing": false,
      },
      "resolvedLanguage": undefined,
      "store": Object {
        "en": Object {},
      },
    }
  }
  padding={3}
  pagination={
    Object {
      "currentPage": 1,
      "nextPage": 2,
      "perPage": 1,
      "prevPage": 0,
      "totalCount": 2,
      "totalPages": 2,
    }
  }
  paginationClickHandler={[Function]}
  paginationTarget="#pagination-target"
  t={[Function]}
  tReady={true}
/>
`;

exports[`global/components/utility/Pagination when it is compact matches the snapshot 1`] = `
<Utility.Pagination
  compact={true}
  i18n={
    Object {
      "language": "en",
      "languages": Array [
        "en",
      ],
      "options": Object {
        "appendNamespaceToCIMode": false,
        "appendNamespaceToMissingKey": false,
        "contextSeparator": "_",
        "debug": false,
        "defaultNS": Array [
          "translation",
        ],
        "fallbackLng": Array [
          "en",
        ],
        "fallbackNS": false,
        "ignoreJSONStructure": true,
        "initImmediate": true,
        "interpolation": Object {
          "escapeValue": true,
          "format": [Function],
          "formatSeparator": ",",
          "maxReplaces": 1000,
          "nestingOptionsSeparator": ",",
          "nestingPrefix": "$t(",
          "nestingSuffix": ")",
          "prefix": "{{",
          "skipOnVariables": true,
          "suffix": "}}",
          "unescapePrefix": "-",
        },
        "joinArrays": false,
        "keySeparator": ".",
        "lng": "en",
        "load": "all",
        "missingInterpolationHandler": false,
        "missingKeyHandler": false,
        "nonExplicitSupportedLngs": false,
        "ns": Array [
          "translation",
        ],
        "nsSeparator": ":",
        "overloadTranslationOptionHandler": [Function],
        "parseMissingKeyHandler": false,
        "partialBundledLanguages": false,
        "pluralSeparator": "_",
        "postProcess": false,
        "postProcessPassResolved": false,
        "preload": false,
        "resources": Object {
          "en": Object {},
        },
        "returnEmptyString": true,
        "returnNull": true,
        "returnObjects": false,
        "returnedObjectHandler": false,
        "saveMissing": false,
        "saveMissingPlurals": true,
        "saveMissingTo": "fallback",
        "simplifyPluralSuffix": true,
        "supportedLngs": false,
        "updateMissing": false,
      },
      "resolvedLanguage": undefined,
      "store": Object {
        "en": Object {},
      },
    }
  }
  padding={3}
  pagination={
    Object {
      "currentPage": 1,
      "nextPage": 2,
      "perPage": 1,
      "prevPage": 0,
      "totalCount": 2,
      "totalPages": 2,
    }
  }
  paginationClickHandler={[Function]}
  paginationTarget="#pagination-target"
  t={[Function]}
  tReady={true}
/>
`;

exports[`global/components/utility/Pagination when there are no pagination props renders to null 1`] = `
<Utility.Pagination
  i18n={
    Object {
      "language": "en",
      "languages": Array [
        "en",
      ],
      "options": Object {
        "appendNamespaceToCIMode": false,
        "appendNamespaceToMissingKey": false,
        "contextSeparator": "_",
        "debug": false,
        "defaultNS": Array [
          "translation",
        ],
        "fallbackLng": Array [
          "en",
        ],
        "fallbackNS": false,
        "ignoreJSONStructure": true,
        "initImmediate": true,
        "interpolation": Object {
          "escapeValue": true,
          "format": [Function],
          "formatSeparator": ",",
          "maxReplaces": 1000,
          "nestingOptionsSeparator": ",",
          "nestingPrefix": "$t(",
          "nestingSuffix": ")",
          "prefix": "{{",
          "skipOnVariables": true,
          "suffix": "}}",
          "unescapePrefix": "-",
        },
        "joinArrays": false,
        "keySeparator": ".",
        "lng": "en",
        "load": "all",
        "missingInterpolationHandler": false,
        "missingKeyHandler": false,
        "nonExplicitSupportedLngs": false,
        "ns": Array [
          "translation",
        ],
        "nsSeparator": ":",
        "overloadTranslationOptionHandler": [Function],
        "parseMissingKeyHandler": false,
        "partialBundledLanguages": false,
        "pluralSeparator": "_",
        "postProcess": false,
        "postProcessPassResolved": false,
        "preload": false,
        "resources": Object {
          "en": Object {},
        },
        "returnEmptyString": true,
        "returnNull": true,
        "returnObjects": false,
        "returnedObjectHandler": false,
        "saveMissing": false,
        "saveMissingPlurals": true,
        "saveMissingTo": "fallback",
        "simplifyPluralSuffix": true,
        "supportedLngs": false,
        "updateMissing": false,
      },
      "resolvedLanguage": undefined,
      "store": Object {
        "en": Object {},
      },
    }
  }
  padding={3}
  paginationClickHandler={[Function]}
  paginationTarget="#pagination-target"
  t={[Function]}
  tReady={true}
/>
`;
